<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/OverviewStyle"
    android:layout_height="match_parent"
    tools:context=".presentation.person.PersonFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_person">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_person_poster"
                android:layout_width="150dp"
                android:layout_height="225dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:elevation="10dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageview_person_poster"
                    android:layout_width="150dp"
                    android:layout_height="225dp"
                    android:contentDescription="@string/person_poster_desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/placeholder" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView_person_info_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/personal_info_label"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/cardView_person_poster"
                app:layout_constraintTop_toTopOf="@+id/cardView_person_poster" />

            <TextView
                android:id="@+id/textView_person_known_for_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/known_for_label"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/cardView_person_poster"
                app:layout_constraintTop_toBottomOf="@+id/textView_person_info_label" />

            <TextView
                android:id="@+id/textView_person_known_for"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:textSize="11sp"
                app:layout_constraintStart_toEndOf="@+id/cardView_person_poster"
                app:layout_constraintTop_toBottomOf="@+id/textView_person_known_for_label"
                tools:text="Acting" />

            <TextView
                android:id="@+id/textView_person_gender_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/gender_label"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/cardView_person_poster"
                app:layout_constraintTop_toBottomOf="@+id/textView_person_known_for" />

            <TextView
                android:id="@+id/textView_person_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:textSize="11sp"
                app:layout_constraintStart_toEndOf="@+id/cardView_person_poster"
                app:layout_constraintTop_toBottomOf="@+id/textView_person_gender_label"
                tools:text="Male" />

            <TextView
                android:id="@+id/textView_person_birthday_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/birthday_label"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/cardView_person_poster"
                app:layout_constraintTop_toBottomOf="@+id/textView_person_gender" />

            <TextView
                android:id="@+id/textView_person_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:textSize="11sp"
                app:layout_constraintStart_toEndOf="@+id/cardView_person_poster"
                app:layout_constraintTop_toBottomOf="@+id/textView_person_birthday_label"
                tools:text="1996-06-01 (25 years old)" />

            <TextView
                android:id="@+id/textView_person_place_of_birth_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/place_of_birth_label"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/cardView_person_poster"
                app:layout_constraintTop_toBottomOf="@+id/textView_person_birthday" />

            <TextView
                android:id="@+id/textView_person_place_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:textSize="11sp"
                app:layout_constraintStart_toEndOf="@+id/cardView_person_poster"
                app:layout_constraintTop_toBottomOf="@+id/textView_person_place_of_birth_label"
                tools:text="Surrey, England, UK" />


            <TextView
                android:id="@+id/textView_person_biography_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/biography_label"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_person" />

            <TextView
                android:id="@+id/textView_person_biography"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_person_biography_label"
                tools:text="@string/person_bio_tools" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_person"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView_person_poster" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/toolbar_person"
        layout="@layout/toolbar_movie_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/progress_bar_person"
        layout="@layout/progressbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>