<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginBottom="16dp"
    android:backgroundTint="?android:attr/colorBackground"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView_media_poster"
            android:layout_width="160dp"
            android:layout_height="240dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/poster" />

        <ImageView
            android:id="@+id/imageView_media_shadow"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:contentDescription="@string/item_gradient"
            app:layout_constraintBottom_toBottomOf="@id/imageView_media_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/gradient_shadow" />


        <TextView
            android:id="@+id/textView_media_title"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView_media_poster"
            app:layout_constraintStart_toStartOf="@+id/imageView_media_poster"
            tools:text="Armour of God" />

        <TextView
            android:id="@+id/textView_media_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView_media_title"
            app:layout_constraintEnd_toEndOf="@+id/imageView_media_poster"
            app:layout_constraintStart_toStartOf="@+id/imageView_media_poster"
            tools:text="2020" />

        <ImageView
            android:id="@+id/imageView_media_rate_background"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/item_popular_rate_background"
            app:layout_constraintEnd_toEndOf="@+id/imageView_media_poster"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background_rate" />

        <TextView
            android:id="@+id/textView_media_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_media_rate_background"
            app:layout_constraintEnd_toEndOf="@+id/imageView_media_rate_background"
            app:layout_constraintStart_toStartOf="@+id/imageView_media_rate_background"
            app:layout_constraintTop_toTopOf="@+id/imageView_media_rate_background"
            tools:text="9.9" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
