<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.details.DetailsFragment">

    <ImageView
        android:id="@+id/imageView_details_back_poster"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/details_back_poster_desc"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_details_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/backdrop" />

    <View
        android:id="@+id/overlay_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:background="#CB263340"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_details_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_details_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Armour of God" />

    <ImageView
        android:id="@+id/imageView_details_poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/details_poster_desc"
        app:circularflow_radiusInDP="true"
        app:layout_constraintStart_toStartOf="@+id/textView_details_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_details_title"
        tools:src="@drawable/poster" />

    <TextView
        android:id="@+id/textView_details_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/imageView_details_poster"
        app:layout_constraintTop_toBottomOf="@+id/textView_details_title"
        tools:text="details_data" />

    <TextView
        android:id="@+id/textView_details_runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/imageView_details_poster"
        app:layout_constraintTop_toBottomOf="@+id/textView_details_data"
        tools:text="textView_details_runtime" />

    <TextView
        android:id="@+id/textView_details_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/imageView_details_poster"
        app:layout_constraintTop_toBottomOf="@+id/textView_details_runtime"
        tools:text="textView_details_genre" />

    <TextView
        android:id="@+id/textView_details_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_dark_circle"
        app:layout_constraintTop_toBottomOf="@+id/textView_details_genre"
        tools:text="details_score" />

    <ProgressBar
        android:id="@+id/progress_bar_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="?colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_dark_circle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:background="@drawable/dark_circle"
        android:contentDescription="@string/dark_circle_desc"
        app:layout_constraintBottom_toBottomOf="@+id/details_circularProgressbar"
        app:layout_constraintEnd_toEndOf="@id/details_circularProgressbar"
        app:layout_constraintStart_toStartOf="@+id/details_circularProgressbar"
        app:layout_constraintTop_toTopOf="@+id/details_circularProgressbar" />

    <ProgressBar
        android:id="@+id/details_circularProgressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/circular"
        android:secondaryProgress="100"
        app:layout_constraintBottom_toBottomOf="@+id/textView_details_score"
        app:layout_constraintStart_toEndOf="@+id/imageView_details_poster"
        app:layout_constraintTop_toTopOf="@+id/textView_details_score"
        tools:progress="50" />

    <TextView
        android:id="@+id/textView_details_progressbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/details_circularProgressbar"
        app:layout_constraintEnd_toEndOf="@id/details_circularProgressbar"
        app:layout_constraintStart_toStartOf="@id/details_circularProgressbar"
        app:layout_constraintTop_toTopOf="@id/details_circularProgressbar"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="233dp"
        tools:text="50" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_details_poster">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_details_overview_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/overview_label"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_details_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text=""
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView_details_overview_label"
                app:layout_constraintTop_toBottomOf="@+id/textView_details_overview_label"
                tools:text="textView_details_overview" />

            <TextView
                android:id="@+id/textView_details_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/top_billed_cast_label"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView_details_overview_label"
                app:layout_constraintTop_toBottomOf="@+id/textView_details_overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_details"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView_details_cast"
                app:layout_constraintTop_toBottomOf="@+id/textView_details_cast" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/add_to_favorite_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>